fix (main) photos - still dont overlap

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,17 +6,22 @@
     /* border: 1px solid red; */
 }
 
+/* font family */
+
 html{
     font-family: sans-serif;
 }
 
+/* header */
+
 header{
     background-color: orange;
     padding-block: 20px;
-    /* position: fixed; */
-    /* top: 0; */
-    /* left: 0; */
-    /* right: 0; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
 }
 
 .container{
@@ -52,95 +57,7 @@ nav ul li{
     font-size: 2rem;
 }
 
-.row{
-    display: flex;
-    gap: 20px;
-    padding-block: 30px;
-}
-
-.photo{ 
-    position: relative;
-    background-repeat: no-repeat;
-}
-
-.relaxed{
-    background-image: url(./img/img-defaul/1.webp);
-}
-
-.guess{
-    background-image: url(./img/img-defaul/2.webp);
-}
-
-.zucchero{
-    background-image: url(./img/img-defaul/3.webp);
-}
-
-.tee{
-    background-image: url(./img/img-defaul/4.webp);
-}
-
-.deluxe{
-    background-image: url(./img/img-defaul/5.webp);
-}
-
-.sweater{
-    background-image: url(./img/img-defaul/6.webp);
-}
-
-.heart{
-    position: absolute;
-    font-size: 40px;
-    top: 5px;
-    right: 0;
-    background-color: #ffffff;
-    padding: 10px;
-}
-
-.heart:hover{ 
-    color: red;
-}
-
-.discount{
-    background-color: red;
-    color: white;
-    padding: 5px;
-}
-
-.sustainability{
-    background-color: green;
-    color: white;
-    padding: 5px;
-}
-
-.more{
-    position: absolute;
-    bottom: 40px;
-    left: 0;
-}
-
-.brand, .real-price{
-    color: gray;
-}
-
-.discounted-price{
-    color: red;
-}
-
-.real-price{
-    text-decoration: line-through; 
-}
-
-.box{
-    width: calc(100% / 3 - 40px);
-}
-
-.hover{
-    opacity: 0;
-}
-
-.hover:hover{
-    opacity: 1;
-}
+/* footer */
 
 .container div ul li{
     list-style-type: none;
@@ -171,3 +88,95 @@ h4{
     font-size: 3rem;
     margin-bottom: 10px;
 } 
+
+/* photo boxes */
+
+.box{
+    width: calc(100% / 3 - 40px);
+    margin-top: 200px;
+}
+
+.box figure{
+    width: 100%;
+    position: relative;
+}
+
+.box figure img{
+    width: 100%;
+    display: inline-block;
+    position: relative;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
+/* display and hover photo */
+
+.display-photo{
+    opacity: 100%;
+}
+
+.display-photo:hover{ 
+    opacity: 0%;
+}
+
+.hover-photo{
+    opacity: 0%;
+}
+
+.hover-photo:hover{ 
+    opacity: 100%;
+}
+
+
+
+
+/* heart and on-image-text */
+
+.heart{
+    position: absolute;
+    font-size: 40px;
+    top: 5px;
+    right: 0;
+    background-color: #ffffff;
+    padding: 10px;
+}
+
+.heart:hover{ 
+    color: red;
+}
+
+.discount{
+    background-color: red;
+    color: white;
+    padding: 5px;
+}
+
+.sustainability{
+    background-color: green;
+    color: white;
+    padding: 5px;
+}
+
+/* under image text */
+
+.more{
+    position: absolute;
+    bottom: 40px;
+    left: 0;
+}
+
+.brand, .real-price{
+    color: gray;
+}
+
+.discounted-price{
+    color: red;
+}
+
+.real-price{
+    text-decoration: line-through; 
+}
+
+
